--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
         "type": "git",
         "url": "https://github.com/MatteoArella/async-openssl"
     },
-    "main": "src/index.js"
+    "main": "src/index.js",
+    "devDependencies": {
+        "eslint": "^6.8.0",
+        "mocha": "^7.0.0"
+    },
+    "scripts": {
+        "lint": "node ./node_modules/eslint/bin/eslint . --max-warnings=0 --ignore-pattern 'test/'",
+        "test": "npm run lint && mocha test/index.js"
+    }
 }
