--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "main": "src/index.js",
     "devDependencies": {
         "eslint": "^6.8.0",
-        "mocha": "^7.0.0"
+        "mocha": "^7.0.0",
+        "chai": "^4.2.0",
+        "chai-as-promised": "^7.1.1"
     },
     "scripts": {
         "lint": "node ./node_modules/eslint/bin/eslint . --max-warnings=0 --ignore-pattern 'test/'",
